--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,15 @@ html {
   font-family: monospace;
 }
 
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
+.dark .nav-links a {
+  color: #fff;
+}
+
 body {
   margin: 0 auto;
   width: 100%;
